# js-types

./: .gitignore  .release-it.json  BUILD.bazel  README.md  VERSION  WORKSPACE  header.d.ts  index.d.ts  package-lock.json  package.json
.github/: autoapproval.yml
.github/workflows/: ci.yml  release.yml  sync.sh  sync.yml  test.yml
