exports_files(
    ["index.d.ts"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "definitelytyped_d_ts",
    srcs = [
        ":index.d.ts",
        ":header.d.ts",
        ":VERSION",
    ],
    outs = ["definitelytyped.d.ts"],
    cmd = "version=`cut -d '.' -f 1,2 <$(location :VERSION)`;" +
          "sed \"s/VERSION/$$version/g\" $(location :header.d.ts) > $@; " +
          "cat $(location :index.d.ts) >> $@; ",
)
